# Multiphase-LBM

./: CooLBM_MRT_combustion.cpp  LICENSE  README.md  conservative_phasefield_periodic_2d.cpp
Abbashub LBM/: CMakeLists.txt  compile.sh
Abbashub LBM/apps/Config_Files/: config_laplace2D.txt
Abbashub LBM/out_single-phase fluid flow through a compliant vessel/: sol_0000000.vtk  sol_0000108.vtk  sol_0000189.vtk  sol_0000270.vtk  sol_0000405.vtk  sol_0000513.vtk  sol_0000648.vtk  sol_0000702.vtk  sol_0000756.vtk  sol_0000864.vtk  sol_0001053.vtk  sol_0001188.vtk  sol_0001242.vtk  sol_0001269.vtk  sol_0001323.vtk  sol_0001377.vtk  sol_0001404.vtk  sol_0001539.vtk  sol_0001593.vtk  sol_0001782.vtk  sol_0001809.vtk  sol_0001863.vtk  sol_0002214.vtk  sol_0002295.vtk  sol_0002511.vtk  sol_0002565.vtk  sol_0002646.vtk  sol_0002673.vtk
Abbushub LBM/apps/: COOLBM.cpp
Abbushub LBM/out_single-phase fluid flow through a compliant vessel/: COOLBM  sol_0000081.vtk  sol_0000243.vtk  sol_0000351.vtk  sol_0000540.vtk  sol_0000621.vtk  sol_0000675.vtk  sol_0000891.vtk  sol_0000945.vtk  sol_0000999.vtk  sol_0001107.vtk  sol_0001350.vtk  sol_0001647.vtk  sol_0001674.vtk  sol_0001701.vtk  sol_0001917.vtk  sol_0002025.vtk  sol_0002052.vtk  sol_0002133.vtk  sol_0002187.vtk  sol_0002241.vtk  sol_0002322.vtk  sol_0002403.vtk  sol_0002430.vtk  sol_0002619.vtk
Multiphase LBM/apps/: CMakeLists.txt  PulsatileBloodFlow2D.h  Young_Laplace2D.h
Multiphase LBM/out_single-phase fluid flow through a compliant vessel/: sol_0000027.vtk  sol_0000054.vtk  sol_0000135.vtk  sol_0000162.vtk  sol_0000216.vtk  sol_0000297.vtk  sol_0000324.vtk  sol_0000378.vtk  sol_0000432.vtk  sol_0000459.vtk  sol_0000486.vtk  sol_0000567.vtk  sol_0000594.vtk  sol_0000729.vtk  sol_0000783.vtk  sol_0000810.vtk  sol_0000837.vtk  sol_0000918.vtk  sol_0000972.vtk  sol_0001026.vtk  sol_0001080.vtk  sol_0001134.vtk  sol_0001161.vtk  sol_0001215.vtk  sol_0001296.vtk  sol_0001431.vtk  sol_0001458.vtk  sol_0001485.vtk  sol_0001512.vtk  sol_0001566.vtk  sol_0001620.vtk  sol_0001728.vtk  sol_0001755.vtk  sol_0001836.vtk  sol_0001890.vtk  sol_0001944.vtk  sol_0001971.vtk  sol_0001998.vtk  sol_0002079.vtk  sol_0002106.vtk  (+11 more)
Phase field model/: README.md  Untitled.py
Phase field model/apps/: COOLBM.cpp  laplace2D_Fakhari.h  twoLayeredFlow2D.h
Phase field model/apps/Config_Files/: config_laplace3D.txt  config_porous3D.txt
coolbm-phase-field/: Untitled.ipynb
coolbm-phase-field/apps/: COOLBM.cpp  laplace3D.h  rayleighTaylor2D.h
coolbm-phase-field/apps/Config_Files/: config_laplace2D.txt  config_twoLayeredFlow2D.txt
shan-chen single component model/apps/: COOLBM.cpp  fortran  laplace2D.h
shan-chen single component model/apps/Config_Files/: config_RayleighTaylor2D.txt  config_contactAngle2D.txt  config_twoLayeredFlow2D.txt
shan-chen_single_component/: LICENSE.md
shan-chen_single_component/apps/: RayleighTaylor2D.h  contactAngle2D.h  twoLayeredFlow2D.h
shan-chen_single_component/apps/Config_Files/: config_Laplace2D.txt
